--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
 html {
   background: #FF0066;
-  
+  background: #FF0066 -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6c7989), color-stop(100%, #FF0066)) fixed;
+  background: #FF0066 -webkit-linear-gradient(#6c7989, #FF0066) fixed;
+  background: #FF0066 -moz-linear-gradient(#6c7989, #FF0066) fixed;
+  background: #FF0066 -o-linear-gradient(#6c7989, #FF0066) fixed;
+  background: #FF0066 -ms-linear-gradient(#6c7989, #FF0066) fixed;
+  background: #FF0066 linear-gradient(#6c7989, #FF0066) fixed;
 }
 
 body {
